Fri Apr 23 12:03:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Home.idl:
          Enable the key exceptions for the moment, we need more work in TAO_IDL

Fri Apr 23 11:24:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Home.idl:
          Don't include IFR with LwCCM

Fri Apr 23 09:43:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.h:
          Resolved compile issues.

        * connectors/dds4ccm/tests/QosProfile/Base/QosProfile_Test_Base.idl:
          Renamed improper naming.

Fri Apr 23 09:28:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Home.idl:
          Disable Key exceptions with LwCCM

Fri Apr 23 09:21:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_Enumeration.idl:
          Disabled for LwCCM

Fri Apr 23 09:15:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/CCM_StateIdFactory.idl:
          Disabled completely for LwCCM

        * docs/TODO.html:
          Removed reference to ciao_pre/post methods

Fri Apr 23 09:08:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Created a unique name for a contentfilteredTopic, using
          a prefix in combination with the name of the original topic.
          This'll prevent errors when more than one filter is used in
          several connectors.

Fri Apr 23 09:53:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * docs/OMG-CCM-Tutorial.ppt
        Made changes for AMI4CCM.

Fri Apr 23 08:47:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Removed !FIXED_BUG_ONLY flag from the
          QueryFilter test.

        * connectors/dds4ccm/impl/dds/DDS_Get_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_Listen_T.h: